--- a/Order/kubernetes/deployment.yml
+++ b/Order/kubernetes/deployment.yml
@@ -16,6 +16,35 @@ spec:
     spec:
       containers:
         - name: order
-          image: isubcreg01.azurecr.io/order:v1
+          image: isub01cr.azurecr.io/order:v1
           ports:
             - containerPort: 8080
+#          resources:
+#            limits:
+#              cpu: 500m
+#            requests:
+#              cpu: 200m
+          ## Config map Set start
+          env:
+            - name: SYSTEM_MODE
+              valueFrom:
+                configMapKeyRef:
+                  name: systemmode
+                  key: sysmodeval
+          ## Config map Set end
+          readinessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 10
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 10
+          livenessProbe:
+            httpGet:
+              path: '/actuator/health'
+              port: 8080
+            initialDelaySeconds: 120
+            timeoutSeconds: 2
+            periodSeconds: 5
+            failureThreshold: 5
