--- a/gateway/kubernetes/deployment.yml
+++ b/gateway/kubernetes/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: isubcreg01.azurecr.io/gateway:v1
+          image: isub01cr.azurecr.io/gateway:v1
           ports:
             - containerPort: 8080
